--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3"
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1"
   }
 }
